--- a/.github/workflows/sync-public.yml
+++ b/.github/workflows/sync-public.yml
@@ -5,12 +5,12 @@ jobs:
     Sync-Public:
     runs-on: ubuntu-latest
     steps:
-        - name: Sync Public
-        uses: andstor/copycat-action@v3
-        with:
-            personal_token: ${{ secrets.PERSONAL_TOKEN }}
-            src_path: /.
-            dst_path: /.
-            dst_owner: qudo-code
-            dst_repo_name: RUNBOOK
+    - name: Sync Public
+    uses: andstor/copycat-action@v3
+    with:
+        personal_token: ${{ secrets.PERSONAL_TOKEN }}
+        src_path: /Public/guides
+        dst_path: /guides
+        dst_owner: qudo-code
+        dst_repo_name: RUNBOOK
     
