--- a/.github/workflows/sync-public.yml
+++ b/.github/workflows/sync-public.yml
@@ -1,16 +1,18 @@
-name: Deploy Obsidian
-run-name: ${{ github.actor }} 🚀
-on: [push]
+name: Copy
+on: gollum
 jobs:
-    Sync-Public:
+  copy:
     runs-on: ubuntu-latest
     steps:
-    - name: Sync Public
-    uses: andstor/copycat-action@v3
-    with:
+    - name: Copycat
+      uses: andstor/copycat-action@v3
+      with:
         personal_token: ${{ secrets.PERSONAL_TOKEN }}
-        src_path: /Public/guides
-        dst_path: /guides
+        src_path: /Public/Guides/
+        dst_path: /guides/
         dst_owner: qudo-code
         dst_repo_name: RUNBOOK
-    
+        dst_branch: master
+        src_branch: master
+        username: qudo-code
+        email: qudo+bot@gmail.com
