--- a/.github/workflows/sync-public.yml
+++ b/.github/workflows/sync-public.yml
@@ -7,7 +7,7 @@ jobs:
     - name: Copycat
       uses: andstor/copycat-action@v3
       with:
-        personal_token: ${{ secrets.PERSONAL_TOKEN }}
+        personal_token: ${{ secrets.GITHUB_TOKEN }}
         src_path: /Public/Guides/
         dst_path: /guides/
         dst_owner: qudo-code
