--- a/.github/workflows/sync-public.yml
+++ b/.github/workflows/sync-public.yml
@@ -1,18 +1,41 @@
-name: Copy
-on: [push]
+# name: Copy
+# on: [push]
+# jobs:
+#   copy:
+#     runs-on: ubuntu-latest
+#     steps:
+#     - name: Copycat
+#       uses: andstor/copycat-action@v3
+#       with:
+#         personal_token: ${{ secrets.GITHUB_TOKEN }}
+#         src_path: /Public/Guides/
+#         dst_path: /guides/
+#         dst_owner: qudo-code
+#         dst_repo_name: RUNBOOK
+#         dst_branch: master
+#         src_branch: master
+#         username: qudo-code
+#         email: qudo+bot@gmail.com
+
+name: Push File
+
+on: push
+
 jobs:
-  copy:
+    copy-file:
     runs-on: ubuntu-latest
     steps:
-    - name: Copycat
-      uses: andstor/copycat-action@v3
-      with:
-        personal_token: ${{ secrets.GITHUB_TOKEN }}
-        src_path: /Public/Guides/
-        dst_path: /guides/
-        dst_owner: qudo-code
-        dst_repo_name: RUNBOOK
-        dst_branch: master
-        src_branch: master
-        username: qudo-code
-        email: qudo+bot@gmail.com
+    - name: Checkout
+        uses: actions/checkout@v2
+
+    - name: Pushes test file
+        uses: dmnemec/copy_file_to_another_repo_action@main
+        env:
+        API_TOKEN_GITHUB: ${{ secrets.GITHUB_TOKEN }}
+        with:
+        source_file: '/PUblic/Guides/'
+        destination_repo: 'RUNBOOK'
+        destination_folder: 'guides'
+        user_email: 'qudo@matr.world'
+        user_name: 'qudo-code'
+        commit_message: 'sync obsidian vault'
